--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     runtime('org.springframework.boot:spring-boot-devtools')
     compileOnly('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('io.projectreactor:reactor-test')
+    testCompile('io.projectreactor:reactor-test1')
 }
